Remoção do width ,height  e ion-header.

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -26,6 +26,6 @@
   text-decoration: none;
 }
 
-ion-content {
-  --background: transparent;
+ion-content.camaera {
+  --background: transparent !important;
 }
